@@ -10,3 +10,28 @@
   width: 800px;
   margin: 0px;
 }
+.thumbnails_main p {
+  text-align: left;
+  font-family: 'Titillium Web', sans-serif;
+  font-weight: 200;
+  font-size: 110%;
+  color: #7D7D7D;
+  font-style: normal;
+  padding: 0;
+  margin: 0;
+  margin-left: 5px;
+  line-height: 20px;
+}
+.thumbnails_main h3 {
+  font-family: 'Titillium Web', sans-serif;
+  font-weight: 200;
+  font-size: 110%;
+  color: #666;
+  text-align: left;
+  font-style: normal;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+  margin-left: 5px;
+  line-height: 30px;
+}
