@@ -192,3 +192,7 @@ a:hover,a:active {
 #newsletter_modal p {
   line-height: 1.2em;
 }
+#photos_counter {
+	font-size: 14px;	
+	color: #666;
+}
