@@ -12,10 +12,7 @@
     <title><%= @title ? @title : "Heritage" %></title>
     <%= csrf_meta_tags %>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-    <![endif]-->
+		<link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
     <%= stylesheet_link_tag "global", :media => "all" %>
