@@ -1,3 +1,10 @@
+2013-01-20  Fabien Penso <fabien.penso@conovae.com>
+
+  * Title in photographer's front page
+  * Slide counters below photos
+  * Bugfixes
+	* 2h
+
 2013-01-08  Fabien Penso <fabien.penso@conovae.com>
 
 	* specs fixing, lots of bugfix
